<resources>
    <string name="app_name">LetsNote</string>
    <string name="facebook_app_id">1713683212207818</string>

    <!--Nombre actividades-->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_mi_perfil">MiPerfil</string>
    <string name="title_activity_perfil_ajeno">PerfilAjeno</string>

    <!-- Mi Perfil y PerfilAjeno-->
    <string name="notas">Notas</string>
    <string name="seguidos">Seguidos</string>
    <string name="seguidores">Seguidores</string>
    <string name="likes">Likes</string>
    <string name="descripcion">Descripción</string>


    <string name="numNotas">0</string>
    <string name="numLikes">0</string>
    <string name="numSeguidores">0</string>
    <string name="numSeguidos">0</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_activity_base_drawer">BaseDrawerActivity</string>

    <string name="action_map">Mapa</string>
    <string name="action_messages">Mensajes</string>
    <string name="action_notes">Notas</string>
    <string name="action_profile">Mi Perfil</string>
    <string name="title_activity_prueba_perfil">PruebaPerfil</string>


</resources>
