<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:id="@+id/vUserProfileRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/style_color_primary"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="64dp"
    app:layout_collapseMode="parallax">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">

        <ImageView
            android:id="@+id/imagenPerfil"
            android:layout_width="@dimen/user_profile_avatar_size"
            android:layout_height="@dimen/user_profile_avatar_size"
            android:layout_marginRight="16dp" />

        <LinearLayout
            android:id="@+id/vUserDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/localidadUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#bbbbbb"
                android:textSize="12sp" />

            <TextView
                android:id="@id/descripcionUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="12sp" />
            <RelativeLayout
                android:layout_width="243dp"
                android:layout_height="49dp">
                <com.project.letsnote.star.LikeButtonView
                    android:id="@+id/starButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="left"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Seguir"
                    android:id="@+id/tvSeguir"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@+id/starButton"
                    android:layout_alignParentTop="true"
                    android:gravity="center_vertical"
                    android:textColor="#ffffff" />

            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>
    <!-- -->
    <LinearLayout
        android:id="@+id/vUserStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.30"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numeroNotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notas"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.39"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numeroLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.74"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numeroSeguidores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seguidores"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
    <!-- FIN DEL LINEAR QUE CONTIENE DATOS + STATS-->

</RelativeLayout>